--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ ALLOWED_HOSTS=192.168.1.20,localhost,127.0.0.1
 FIREBIRD_DSN=localhost:C:\ello\dados\SERRANAS1.ELLO
 FIREBIRD_USER=SYSDBA
 FIREBIRD_PASSWORD=masterkey
-FIREBIRD_CHARSET=UTF8
+FIREBIRD_CHARSET=ISO8859_1
 FIREBIRD_CLIENT_DIR=C:\Program Files (x86)\Firebird\Firebird_2_5\bin
