--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 Django>=4.0,<5.0
 djangorestframework==3.14.0
-firebird-driver
 django-cors-headers
-fdb
-opencv-python==4.8.1.78
-pyzbar==0.1.9
-numpy==1.24.3
 firebirdsql==1.2.2
-passlib
-pyngrok==6.0.0
 waitress==2.1.2
-pyinstaller==6.3.0
-dotenv
-django-cors-headers
-psycopg2-binary
+python-dotenv
+Pillow
+opencv-python==4.8.1.78
+numpy==1.24.3
+pyzbar==0.1.9
+passlib
+fbd
+firebird-driver
